update transactionService tests